--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-# 环境变量文件（包含敏感信息）
-.env
 
-# Python 常见忽略项
-__pycache__/
-*.py[cod]
-*.egg-info/
-.pytest_cache/
-.venv/
-venv/
 
-# IDE
-.idea/
-.vscode/
+doc/*.xls
