--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,17 @@ services:
       - ./backend/data:/app/backend/data
       - ./backend/config:/app/backend/config
     environment:
-      # 如 config.py 支持环境变量，可直接注入（否则通过挂载 config/config.json）
-      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
       - PORT=${PORT:-8001}
+    restart: unless-stopped
+
+  nginx:
+    image: m.daocloud.io/docker.io/library/nginx:alpine
+    container_name: fetrace-nginx
+    ports:
+      - "8080:80"
+    volumes:
+      - ./frontend:/usr/share/nginx/html:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - fetrace
     restart: unless-stopped
