--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/backend_go/main.go"
+            "program": "${workspaceFolder}/backend/main.go"
         }
     ]
 }
